<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/my_Cart_LL"
    android:padding="0dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:cardview="http://schemas.android.com/apk/res-auto"
        android:layout_margin="5dp"
        cardview:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/book_border"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/google_1x"
          android:layout_marginStart="@dimen/google_1x"
          android:background="@color/colorPrimary"
          android:textColor="@color/colorAccent"
          android:text="@string/use"
          android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@color/cardBg"
            android:id="@+id/cpn"
            android:layout_marginEnd="@dimen/book_border"
            android:layout_marginTop="@dimen/google_1x"
            android:layout_weight="1"
            android:text="@string/add"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/book_border"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/book_border"
        android:layout_marginEnd="@dimen/google_1x"
        android:textSize="16sp"
        android:text="@string/text_coup"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="@dimen/book_border"
            android:layout_marginTop="@dimen/google_1x"
            android:text="@string/valid"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/google_1x"
            android:layout_marginTop="@dimen/google_1x"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/validDate"
            android:textSize="16sp"
            android:text="@string/dateValid"/>



        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:id="@+id/cpn_add"
            android:layout_marginStart="@dimen/google_1x"
            android:background="@drawable/primary"
            android:textColor="@color/colorAccent"
            android:text="@string/apply"/>
    </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>