<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/google_1x"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_Image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@color/black"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_"
                    android:layout_width="0dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/Et_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/FirstName"
                        android:text="Umair"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_lastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/LastName"
                        android:text="Khan"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Country"
                        android:text="@string/saudia"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_Mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Mobile"
                        android:text="+923002013621"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:text="ktrading.9430@gmail.coms"
                        android:inputType="textEmailAddress|number" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:text="454515"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/et_Confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_pass"
                        android:text="asdawd"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/gender"
                        android:text="Male"
                        android:inputType="textFilter" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/address"
                        android:text="Riyadh"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/Btn_save"
                        android:layout_width="200dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/saveBtn"
                        android:textColor="@color/colorAccent" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>