<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/my_Cart_LL"
    android:padding="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarTheme">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                app:titleTextColor="@color/colorAccent"
                app:popupTheme="@style/ToolbarTheme"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorAccent"
                    android:text="@string/title"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:hint="@string/Enter_coupon"
            android:id="@+id/enter_cpn"
            android:paddingStart="4dp"
            android:layout_margin="@dimen/book_border"
            android:background="@drawable/edit_text_bg"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/add_cpn_input"
            android:background="@drawable/primary"
            android:layout_marginEnd="@dimen/book_border"
            android:layout_marginTop="@dimen/google_1x"
            android:text="@string/add"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/google_1x"
        android:textAlignment="center"
        android:text="@string/selection"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="@dimen/google_1x"
        android:layout_height="wrap_content" />

</LinearLayout>