<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">



            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgResturaunt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/place_holder"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toStartOf="@+id/BtnAccept"
                android:layout_toEndOf="@id/imgResturaunt"
                android:text="@string/title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="#000000" />



            <TextView
                android:id="@+id/TVAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/imgResturaunt"
                android:text="@string/address"
                android:textColor="#000000"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
                android:textStyle="normal" />

            <Button
                android:id="@+id/BtnAccept"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/accept"
                android:background="@drawable/primary"
                android:textColor="@color/colorAccent"
                android:textStyle="normal" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>